<resources>
    <string name="app_name">DoggieDate</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Registration</string>
    <string name="goto_login">Been here before? Click to Log In</string>
    <string name="goto_register">New Here? Click to Register</string>
    <string name="user_details_placeholder">User Details Placeholder</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello, %1$s!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_register">Register</string>
    <string name="btn_log_in">Log In</string>
    <string name="refresh">Refresh</string>
    <string name="placeholder_dog_name">Placeholder Dog Name</string>
    <string name="placeholder_dog_breed">Placeholder Dog Breed</string>
    <string name="loading_list">Fetching Furry Friends…</string>
    <string name="title_activity_dog_view">DogViewActivity</string>
    <string name="description_dog_image">Image of a dog</string>
    <string name="placeholder_entry_description">Placeholder Entry Description</string>
    <string name="placeholder_entry">Placeholder Entry</string>
    <string name="detail_birthdate">Birthdate</string>
    <string name="detail_breeds">Breeds</string>
    <string name="detail_coat">Coat</string>
    <string name="detail_sex">Sex</string>
    <string name="detail_housetrained">Housetrained</string>
    <string name="detail_interactions">Interactions</string>
    <string name="detail_specialNeeds">Special Needs</string>
    <string name="detail_weight">Weight (lbs)</string>
    <string name="learn_more">Learn More!</string>
</resources>